Implementiere styling, Mock neu component

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,17 +22,9 @@
         <a class="nav-link" routerLink="/kunden">Kunden</a>
       </li>
     </ul>
-    <form class="form-inline my-2 my-lg-0">
-      <input
-        class="form-control mr-sm-2"
-        type="search"
-        placeholder="Search"
-        aria-label="Search"
-      />
-      <button class="btn btn-outline-success my-2 my-sm-0" type="submit">
-        Search
-      </button>
-    </form>
+    <button class="btn btn-outline-success my-2 my-sm-0" routerLink="/neu">
+      Neuer Kunde
+    </button>
   </div>
 </nav>
 <div class="container">
